@@ -29,13 +29,14 @@ stripchart(x, \dots)
            axes = TRUE, frame.plot = axes, \dots)
 }
 \arguments{
-  \item{x}{the data from which the plots are to be produced.  In the default
-    method the data can be specified as a single numeric vector, or as list of numeric
-    vectors, each corresponding to a component plot.  In the \code{formula} 
-    method, a symbolic specification of the form \code{y ~ g} can be given,
+  \item{x}{the data from which the plots are to be produced.  In the
+    default method the data can be specified as a single numeric
+    vector, or as list of numeric vectors, each corresponding to
+    a component plot.  In the \code{formula} method, a symbolic
+    specification of the form \code{y ~ g} can be given,
     indicating the observations in the vector \code{y} are to be
-    grouped according to the levels of the factor \code{g}. \code{NA}s
-    are allowed in the data.}
+    grouped according to the levels of the factor
+    \code{g}.  \code{NA}s are allowed in the data.} 
   \item{data}{a data.frame (or list) from which the variables in
     \code{x} should be taken.}
   \item{subset}{an optional vector specifying a subset of observations
@@ -44,8 +45,8 @@ stripchart(x, \dots)
     when the data contain \code{NA}s.  The default is to ignore missing
     values in either the response or the group.}
   \item{\dots}{additional parameters passed to the default method, or by
-    it to \code{plot}, \code{axis} and \code{title} to control the
-    appearance of the plot.}
+    it to \code{plot}, \code{points}, \code{axis} and \code{title} to
+    control the appearance of the plot.}
   \item{method}{the method to be used to separate coincident points.
     The default method \code{"overplot"} causes such points to be
     overplotted, but it is also possible to specify \code{"jitter"} to
